fixing alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -8,16 +8,23 @@
   --color-border: #ccc;
   --border-redius: 30px;
 }
+
 *,
 *::after,
 *::before {
   box-sizing: border-box;
 }
 /* typography */
+::selection {
+  background: var(--color-primary);
+  color: #fff;
+}
 html {
   /* 62.5% of 16px = 10px */
-  font-size: 68.5%;
-  margin: 5px;
+  font-size: 62.5%;
+}
+img {
+  width: 100%;
 }
 body {
   font-family: Inter, Arial, Helvetica, sans-serif;
@@ -34,14 +41,16 @@ h3 {
 }
 h1 {
   /* 1 x font size of the html element */
-  font-size: 7rem;
+  font-size: 6rem;
 }
 h2 {
   font-size: 4rem;
 }
 
 h3 {
-  font-size: 3rem;
+  font-size: 2.8rem;
+  font-weight: 600;
+  line-height: 1.3;
 }
 p {
   margin-top: 0;
@@ -102,6 +111,7 @@ a {
 }
 .badge--small {
   font-size: 1.6rem;
+  padding: 0.5rem 1.5rem;
 }
 @media screen and (min-width: 1024px) {
   .badge {
@@ -117,7 +127,6 @@ a {
 .list {
   list-style: none;
   padding-left: 0;
-  color: var(--color-headings);
 }
 .list--inline .list__item {
   display: inline-block;
@@ -126,6 +135,7 @@ a {
 .list--tick {
   list-style-image: url(../images/tick.svg);
   padding-left: 3rem;
+  color: var(--color-headings);
 }
 .list--tick .list__item {
   padding-left: 0.5rem;
@@ -185,7 +195,7 @@ a {
   margin-right: 1rem;
   vertical-align: middle;
 }
-.btn--streched {
+.btn--stretched {
   padding-left: 6rem;
   padding-right: 6rem;
 }
@@ -271,7 +281,7 @@ a {
 
 .card__header,
 .card__body {
-  padding: 2rem 3rem;
+  padding: 2rem 7%;
 }
 .card--primary .card__header {
   background: var(--color-primary);
@@ -303,7 +313,7 @@ a {
 }
 
 .plan__price {
-  font-size: 6rem;
+  font-size: 5rem;
 }
 
 .plan__billing-cycle {
@@ -348,6 +358,9 @@ a {
 }
 
 @media screen and (min-width: 1024px) {
+  .plan--popular {
+    transform: scale(1.1);
+  }
   .plan__name {
     font-size: 1.4rem;
   }
@@ -359,12 +372,16 @@ a {
   .plan__billing-cycle {
     font-size: 1.6rem;
   }
+  .plan__description {
+    font-size: 1.7rem;
+  }
 }
 
 /* Media */
 
 .media {
   display: flex;
+  margin-bottom: 4rem;
 }
 
 .media__title {
@@ -395,7 +412,7 @@ a {
 }
 
 .quote__auther {
-  font-size: 3rem;
+  font-size: 2rem;
   font-weight: 500;
   font-style: normal;
   margin-bottom: 0px;
@@ -404,7 +421,7 @@ a {
 .quote__organization {
   color: var(--color-headings);
   opacity: 0.4;
-  font-size: 2rem;
+  font-size: 1.5rem;
   font-style: normal;
 }
 .quote__line {
@@ -446,32 +463,28 @@ a {
 }
 .testimonial__image {
   position: relative;
+  margin: 0 3rem;
 }
-.testimonial__image > img {
-  width: 100%;
-}
+
 .testimonial__image > .icon-container {
   position: absolute;
   top: 3rem;
   right: -32px;
 }
 @media screen and (min-width: 768px) {
-  .testimonial .quote,
-  .testimonial .quote__auther {
-    font-size: 2.4rem;
+  .testimonial__image {
+    margin: 0;
   }
   .testimonial .quote {
-    margin-left: 6rem;
+    margin: 5rem 0 0 6rem;
+    font-size: 120%;
+    line-height: 1.5;
   }
 }
 /* callouts */
 .callout {
-  margin: 0 7rem;
   padding: 4rem;
-  border-radius: 8px;
-  position: relative;
-  bottom: -5rem;
-  z-index: 1;
+  border-radius: 5px;
 }
 .callout--primary {
   background: var(--color-primary);
@@ -554,10 +567,6 @@ a {
   color: #7b858b;
 }
 
-.block--dark .block__heading {
-  color: #fff;
-}
-
 .block--dark h1,
 .block--dark h2,
 .block--dark h3 {
@@ -574,7 +583,6 @@ a {
   clip-path: polygon(0% 0%, 100% 0%, 100% 80%, 0% 100%);
 }
 .block--position {
-  position: relative;
   margin: 0 5rem;
 }
 
@@ -588,7 +596,7 @@ a {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
-  padding: 0 1rem;
+  padding: 1rem;
   align-items: center;
 }
 
@@ -600,6 +608,10 @@ a {
 .nav__item {
   padding: 0.5rem 2rem;
   border-bottom: 1px solid #222;
+}
+
+.nav__item:last-of-type {
+  border-bottom: none;
 }
 
 .nav__item > a {
@@ -645,9 +657,6 @@ a {
   }
 }
 /* Hero */
-.hero {
-  clip-path: polygon(0% 0%, 100% 0%, 100% 90%, 0% 100%);
-}
 
 .hero__tagline {
   font-size: 2rem;
@@ -655,19 +664,16 @@ a {
   letter-spacing: 1px;
   margin: 2rem 0 5rem;
 }
-
-.hero__image {
-  width: 100%;
-}
-
 @media screen and (min-width: 768px) {
-  .hero {
-    padding-top: 0;
-  }
-
   .hero__content {
     text-align: left;
     align-self: center;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .hero {
+    padding-top: 0;
   }
 }
 /* Domain Block */
@@ -728,9 +734,6 @@ a {
 }
 
 /* Showcase Block */
-.block-showcase__image > img {
-  width: 100%;
-}
 
 @media screen and (min-width: 768px) {
   .block-showcase .grid {
@@ -773,6 +776,8 @@ a {
 .footer__heading {
   text-transform: uppercase;
   font-weight: 600;
+  font-size: 2.5rem;
+  line-height: 1.5;
 }
 
 .footer__brand {
@@ -783,7 +788,6 @@ a {
 .footer__brand img {
   /* TODO: Consider refactoring this and applying it to 
   all images. */
-  width: 100%;
   max-width: 230px;
 }
 
@@ -826,4 +830,10 @@ a {
   .footer__heading {
     font-size: 1.6rem;
   }
+}
+
+/* Sign-up callout */
+
+.callout-signup {
+  transform: translateY(5rem);
 }
